# aegisFIM

./: .CMakeLists.txt.swo  .aegisfimignore  .gitignore  CMakeLists.txt  aegis  aegisfim  chave.hmac  readme.md
include/: aegisfim.h
src/: aegishoney.c  aegisnet.c  aegispass.c  aegisport.c  aegisweb.c  baseline.c  check.c  hash.c  main.c  scan.c  tui.c  util.c
web/: app.js  index.html  style.css
